<resources>
    <string name="app_name">Calculator</string>
    <string name="sumar">ADD</string>
    <string name="restar">SUBSTRACT</string>
    <string name="multiplicar">MULTIPLY</string>
    <string name="dividir">DIVIDE</string>
    <string name="lblTitulo">SIMPLE CALCULATOR</string>
    <string name="btnCalcular">CALCULATE</string>
    <string name="numero1">NUMBER 1</string>
    <string name="numero2">NUMBER 2</string>
    <string name="avisoNumCavios">You have to fill in the two numbers</string>
    <string name="indeterminado">Indeterminate</string>
    <string name="infinito">Infinite</string>
</resources>