<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/conTop"
        android:text="@string/lblTitulo"
        android:textSize="@dimen/fuenteTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/anchoBtn"
        android:layout_height="358dp"
        android:layout_marginTop="@dimen/entreComponentes"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitulo">

        <Button
            android:id="@+id/btnSumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/entreComponentes"
            android:text="@string/sumar"
            android:textSize="@dimen/fuenteNormal" />

        <Button
            android:id="@+id/btnRestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/entreComponentes"
            android:text="@string/restar"
            android:textSize="@dimen/fuenteNormal" />

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/entreComponentes"
            android:text="@string/multiplicar"
            android:textSize="@dimen/fuenteNormal" />

        <Button
            android:id="@+id/btnDividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/entreComponentes"
            android:text="@string/dividir"
            android:textSize="@dimen/fuenteNormal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="252dp"
        android:layout_height="217dp"
        android:layout_marginTop="@dimen/entreComponentes"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>